Fix overflowing text

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,6 +26,12 @@
   align-items: center;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
+  .recipe-container {
+    @media screen and (max-width: 768px) {
+      overflow: scroll;
+    }
+  }
 }
 
 body {
